--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>Login</title>
 </head>
 <body>
-    
+    <div id="app">
+        <button id="startlogin">LogIn</button>
+
+        <div id="loginBox" class="hidden">
+            <h2>login</h2>
+
+            <label>
+                username:
+                <input type="text" id="username">
+            </label>
+            <label>
+                password:
+                <input type="text" id="password">
+            </label>
+            <button id="submitlogin">Submit</button>
+        </div>
+    </div>
 </body>
 </html>
