--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="app">
-        <button id="startlogin">LogIn</button>
+        <button id="startLogin">LogIn</button>
 
         <div id="loginBox" class="hidden">
             <h2>login</h2>
@@ -21,8 +21,9 @@
                 password:
                 <input type="text" id="password">
             </label>
-            <button id="submitlogin">Submit</button>
+            <button id="submitLogin">Submit</button>
         </div>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
