--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id="app">
-        <button id="startLogin">LogIn</button>
+        <button id="startLogin">Login</button>
 
         <div id="loginBox" class="hidden">
-            <h2>login</h2>
+            <h2 id="loginHead">Login</h2>
 
             <label>
                 username:
