finishing, gave up on overlap will probably revisit another time

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div id="app">
-        <button id="startLogin">Login</button>
-
+        <div id="loginButton">
+        <button id="startLogin">LOGIN</button>
+        </div>
         <div id="loginBox" class="hidden">
-            <h2 id="loginHead">Login</h2>
+            <h2 id="loginHead">LOGIN</h2>
 
             <label>
                 username:
